--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -151,12 +151,41 @@
     height: $token-list-modal-height;
 
     .modal-content {
-      height: calc(#{$token-list-modal-height} - #{$modal-header-height} - #{$modal-bottom-height});
+      height: calc(#{$token-list-modal-height} - #{$modal-header-height});
       padding: 0.625rem 1.25rem 1.25rem 1.25rem; // 10px 20px 20px 20px
 
-      .field-label {
-        display: inline-block;
-        margin: 1rem 0 0.5rem 0; // 16px 0 8px 0
+      // 관련문서 목록
+      .related-instance-list {
+        margin-top: 0.9375rem; // 15px
+        .table-set {
+          margin-top: 2.188rem; // 35px
+          table {
+            width: 100%;
+            .list-head {
+              tr {
+                color: $light-black;
+                border-bottom: 0.125rem solid $default-gray;
+              }
+            }
+            .list-body {
+              display: block;
+              width: 60rem; // 960px
+              height: 33.125rem; // 530px
+              color: $dark-gray;
+              overflow-y: auto;
+              .instance-list {
+                display: table;
+                width: 100%;
+                height: 3.125rem; // 50px
+                line-height: 3.125rem; // 50px
+                & > td {
+                  display: inline-block; // 말줄임 적용을 위해 추가
+                  vertical-align: middle;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
