--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -38,14 +38,11 @@
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
+        let tokenListModal;
         window.onload = function () {
             aliceForm.init(aliceDocument.initToken, '[[${tokenId}]]');
             OverlayScrollbars(document.querySelectorAll('.list-wrap'), {className: 'scrollbar'});
         };
-
-        function openPopUp(tokenId) {
-            window.open('/tokens/' + tokenId + '/view-pop', tokenId, 'width=1000, height=790');
-        }
 
         function getInstanceList(search, showProgressbar) {
             restSubmit('get', '/tokens/view-pop/list?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
@@ -61,103 +58,49 @@
             }, null, showProgressbar);
         }
 
+        // 관련문서 추가
         function saveTokenList() {
             let checked = document.querySelectorAll('input[name=chk]:checked');
             let jsonArray = new Array();
-
             for (let i = 0; i < checked.length; i++) {
                 let jsonObject = new Object();
-
                 jsonObject.folderId = '[[${folderId}]]';
                 jsonObject.instanceId = checked[i].value;
                 jsonArray.push(jsonObject);
             }
-
             restSubmit('POST', '/rest/folders', function() {
-                opener.aliceDocument.createTokenInfoTab();
-                window.close();
-            }, jsonArray, false);
+                aliceDocument.createTokenInfoTab();
+                tokenListModal.hide();
+            }, jsonArray, true);
         }
 
         // 관련 문서 모달 내부 Template
         function createModalContent(data) {
-            return `<div class="flex-column">` +
+            return `<div class="related-instance-list">` +
                        `<input class="search col-5" type="text" name="search" id="search" th:placeholder="#{token.label.searchPlaceholder}"/>` +
+                       `<button class="point-fill float-right" onclick="saveTokenList();">${i18n.msg('common.btn.add')}</button>` +
                        `<div class="table-set" id="instanceList"></div>` +
                     `</div>`;
         }
 
         // 관련문서 모달
-        function openRelatedToken(tokenId) {
-            aliceJs.sendXhr({
-                method: 'GET',
-                url: '/rest/processes-admin/' + processId + '/data',
-                callbackFunc: function(xhr) {
-                    let responseObject = JSON.parse(xhr.responseText);
-                    responseObject.isView = isView;
-
-                    let options = {
-                        title: i18n.msg('token.label.relatedInstance'),
-                        body: createModalContent(),
-                        classes: 'token-list',
-                        buttons: [{
-                            content: i18n.msg('common.btn.add'),
-                            classes: "point-fill",
-                            bindKey: false,
-                            callback: function(modal) {
-                                saveTokenList();
-                            }
-                        },{
-                            content: i18n.msg('common.btn.close'),
-                            classes: "default-line",
-                            bindKey: false,
-                            callback: function(modal) {
-                                modal.hide();
-                            }
-                        }],
-                        close: {
-                            closable: false,
-                        },
-                        onCreate: function(modal) {
-                            document.getElementById('search').addEventListener('keyup', function() {
-                                getInstanceList(this.value, false);
-                            });
-                            getInstanceList(document.getElementById('search').value, true);
-                        }
-                    };
-                    // 모달 호출
-                    const tokenListModal = new modal(options);
-                    tokenListModal.show();
+        function openRelatedToken(tokenId, search) {
+            tokenListModal = new modal({
+                title: i18n.msg('token.label.relatedInstance'),
+                body: createModalContent(),
+                classes: 'token-list',
+                buttons: [],
+                close: {
+                    closable: false,
                 },
-                contentType: 'application/json; charset=utf-8'
-            });
-        }
-
-        // REST API
-        function restSubmit(method, url, data) {
-            const opt = {
-                method: method,
-                url: url,
-                params: JSON.stringify(data),
-                contentType: 'application/json',
-                callbackFunc: function(response) {
-                    if (method === 'POST') {
-                        const _width = 1800,
-                              _height = 920;
-                        // 중앙 배치
-                        const _left = Math.ceil((window.screen.width - _width) / 2);
-                        const _top = Math.ceil((window.screen.height - _height) / 4);
-
-                        let processId = response.responseText;
-                        sessionStorage.setItem('alice_processes-edit-' + processId, 'firstLoading');
-                        let specs = 'left=' + _left + ',top=' + _top;
-                        specs += ',menubar=no,toolbar=no,location=no,status=no,titlebar=no,scrollbars=yes,resizable=no';
-                        window.open('/processes/' + processId + '/edit', 'process_' + processId + '_edit', 'width=' + _width + ',height=' + _height + ',' + specs);
-                    }
-                    location.reload();
+                onCreate: function(modal) {
+                    document.getElementById('search').addEventListener('keyup', function() {
+                        getInstanceList(this.value, false);
+                    });
+                    getInstanceList(document.getElementById('search').value, true);
                 }
-            };
-            aliceJs.sendXhr(opt);
+            });
+            tokenListModal.show();
         }
 
         function openProcessStatusPopUp() {
