--- a/src/main/resources/public/template/token/tokenInstanceList.html
+++ b/src/main/resources/public/template/token/tokenInstanceList.html
@@ -13,9 +13,9 @@
         <col width="20%">
         <col width="15%">
     </colgroup>
-    <thead>
+    <thead class="list-head">
         <tr>
-            <th style="width:5%;" class="align-left"></th>
+            <th style="width:5%;"  class="align-center"></th>
             <th style="width:20%;" class="align-left" th:text="#{document.label.docNo}"></th>
             <th style="width:20%;" class="align-left" th:text="#{document.label.name}"></th>
             <th style="width:20%;" class="align-left" th:text="#{token.label.startDt}"></th>
@@ -24,21 +24,22 @@
         </tr>
     </thead>
     <tbody id="instanceList" class="list-body">
-        <tr th:each="instance, index : ${instanceList}">
+        <tr class="no-data-found-list flex-row justify-content-center align-items-center"
+            th:if="${#arrays.isEmpty(instanceList)}">
+            <td th:text="#{common.msg.noData}"></td>
+        </tr>
+        <tr class="instance-list"th:each="instance, index : ${instanceList}">
             <td style="width:5%;" class="align-center">
                 <label class="checkbox" th:for="${index.index}" tabindex="0">
                     <input type="checkbox" name="chk" th:id="${index.index}"
                            th:value="${instance.instanceId}">
                     <span></span>
                 </label>
-            <td style="width:20%;" th:text="${instance.documentNo}"></td>
-            <td style="width:20%;" th:text="${instance.documentName}"></td>
-            <td style="width:20%;" th:name="instanceDt" th:text="${instance.instanceStartDt}"/>
-            <td style="width:20%;" th:name="instanceDt" th:text="${instance.instanceEndDt}"/>
-            <td style="width:15%;" th:text="${instance.instanceCreateUserName}"></td>
-        </tr>
-        <tr th:if="${#arrays.isEmpty(instanceList)}">
-            <td colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+            <td style="width:20%;" class="align-left" th:text="${instance.documentNo}"></td>
+            <td style="width:20%;" class="align-left" th:text="${instance.documentName}"></td>
+            <td style="width:20%;" class="align-left" th:name="instanceDt" th:text="${instance.instanceStartDt}"/>
+            <td style="width:20%;" class="align-left" th:name="instanceDt" th:text="${instance.instanceEndDt}"/>
+            <td style="width:15%;" class="align-left" th:text="${instance.instanceCreateUserName}"></td>
         </tr>
     </tbody>
 </table>
