#9262 디자인 사소한 수정사항

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -576,6 +576,7 @@ input, button, select, optgroup, textarea {
   padding: 1.25rem 1.5625rem;
   margin: 0.625rem 0.625rem 0 0;
   border: 0.0625rem solid #EBEBEB;
+  border-radius: 0.1875rem;
   background-color: #F7F8F9;
 }
 
@@ -615,11 +616,11 @@ input, button, select, optgroup, textarea {
 }
 
 .document-container .token-properties .token-info-contents .token-comment .comment-input textarea {
-  height: 4.3750rem;
-  margin-right: 0.3125rem;
   flex: 1;
+  min-height: 4.063rem;
+  padding: 0.625rem 1.563rem;
+  margin-right: 0.3125rem;
   border-radius: 0.1875rem;
-  resize: none;
 }
 
 .document-modal-active {
@@ -1252,6 +1253,26 @@ label {
 
 .switch:focus input[type=checkbox] + span:before {
   border-color: #0098FF;
+}
+
+.input-button input[type="text"] {
+  margin: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.input-button input[type="text"]:focus, .input-button input[type="text"]:hover {
+  z-index: 1;
+}
+
+.input-button button {
+  margin-left: -0.0625rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.input-button button:focus, .input-button button:hover, .input-button button:active {
+  z-index: 1;
 }
 
 .select {
