--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1275,6 +1275,26 @@ label {
   border-color: #0098FF;
 }
 
+.input-button input[type="text"] {
+  margin: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.input-button input[type="text"]:focus, .input-button input[type="text"]:hover {
+  z-index: 1;
+}
+
+.input-button button {
+  margin-left: -0.0625rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.input-button button:focus, .input-button button:hover, .input-button button:active {
+  z-index: 1;
+}
+
 input:read-only {
   color: #ACB4BF;
   background-color: #F7F8F9;
@@ -2651,7 +2671,7 @@ button .icon-delete {
  */
 .scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.5rem;
 }
 
 .scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -2769,7 +2789,7 @@ button .icon-delete {
 
 .inner-scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.25rem;
 }
 
 .inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -2840,7 +2860,7 @@ button .icon-delete {
 
 .inner-scrollbar-dark > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.25rem;
 }
 
 .inner-scrollbar-dark > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
