--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -209,6 +209,7 @@
             padding: 1.25rem 1.5625rem; // 20px 25px
             margin: 0.625rem 0.625rem 0 0; // 10px 10px 0 0
             border: 0.0625rem solid $line-gray; // 1px
+            border-radius: 0.1875rem; // 3px
             background-color: $light-gray;
             .comment {
               &-row {
@@ -239,11 +240,11 @@
             padding: 0;
 
             textarea {
-              height: 4.3750rem; // 70px
-              margin-right: 0.3125rem; // 5px
               flex: 1;
+              min-height: 4.063rem; // 65px
+              padding: 0.625rem 1.563rem; // 10px 25px
+              margin-right: 0.3125rem; // 5px
               border-radius: 0.1875rem; // 3px
-              resize: none;
             }
           }
         }
