--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -140,6 +140,10 @@
                           padding: 0 0.3125rem; // 0 5px
                           margin: 0;
                         }
+                        .profile-photo {
+                          width: 1.688rem; // 27px
+                          height: 1.688rem; // 27px
+                        }
                     }
                 }
             }
