--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -70,9 +70,9 @@
                         </div>
                         <div class="form-set">
                             <label th:text="#{user.label.department}" for="department"></label>
-                            <div class="flex-row">
-                                <input class="col-5" id="department" name="department" th:value="${deptCodeDetail?.codeValue}" disabled>
+                            <div class="flex-row input-button">
                                 <input type="hidden" id="departmentCode" name="departmentCode" th:value="${deptCodeDetail?.code}"/>
+                                <input class="col-5" id="department" name="department" th:value="${deptCodeDetail?.codeValue}" readonly>
                                 <button type="button" class="default-line col-1" onclick="deptPopUp();" th:text="#{common.btn.select}"></button>
                             </div>
                         </div>
