--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -2651,7 +2651,7 @@ button .icon-delete {
  */
 .scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.5rem;
 }
 
 .scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -2769,7 +2769,7 @@ button .icon-delete {
 
 .inner-scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.25rem;
 }
 
 .inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -2840,7 +2840,7 @@ button .icon-delete {
 
 .inner-scrollbar-dark > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.25rem;
 }
 
 .inner-scrollbar-dark > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -3355,7 +3355,7 @@ body.modal-active {
   background-color: rgba(0, 152, 255, 0.05);
 }
 
-.thumbnail-main .thumbnail .thumbnail-img {
+.thumbnail-main .thumbnail .thumbnail-img, .thumbnail-main .thumbnail .thumbnail-file {
   display: inline-block;
   width: 100%;
   height: 9.063rem;
