--- a/src/main/resources/public/src/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/template/_thumbnail.scss
@@ -28,7 +28,7 @@
       background-color: $thumbnail-selected-bg-color;
     }
     // 썸네일 이미지
-    .thumbnail-img {
+    .thumbnail-img, .thumbnail-file {
       display: inline-block;
       width: 100%;
       height: 9.063rem; // 145px
