--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -777,6 +777,13 @@ input:disabled {
   cursor: default;
 }
 
+input:read-only {
+  background-color: #F7F8F9;
+  border-color: #EBEBEB;
+  pointer-events: none;
+  cursor: default;
+}
+
 input.icon {
   padding-right: 2.5rem;
 }
@@ -2651,7 +2658,7 @@ button .icon-delete {
  */
 .scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.5rem;
 }
 
 .scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -2769,7 +2776,7 @@ button .icon-delete {
 
 .inner-scrollbar > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.25rem;
 }
 
 .inner-scrollbar > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
@@ -2840,7 +2847,7 @@ button .icon-delete {
 
 .inner-scrollbar-dark > .os-scrollbar-horizontal {
   right: 0.625rem;
-  height: 0.75rem;
+  height: 0.25rem;
 }
 
 .inner-scrollbar-dark > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
