--- a/src/main/resources/public/template/document/documentEdit.html
+++ b/src/main/resources/public/template/document/documentEdit.html
@@ -82,7 +82,7 @@
                     <div class="selected-color-box">
                         <div id="selected-color" name="selected-color" class="selected-color"></div>
                     </div>
-                    <input type="text" id="document-color" name="document-color" th:value="${documentData?.documentColor}" disabled/>
+                    <input type="text" id="document-color" name="document-color" th:value="${documentData?.documentColor}" readonly/>
                 </div>
                 <div id="color-palette-layer">
                     <div id="document-colorPalette" name="document-colorPalette" class="color-palette"></div>
