--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -15,221 +15,199 @@
 //   - 메뉴가 출력되는 부분. default theme 에는 메뉴 부분 전체를 접고 펴는 기능은 없다.
 // *********************************************************************************************************************
 
-.navigation {
-  width: $nav-width;
-  height: $nav-height;
-  background-color: $nav-bg-color;
-  position: fixed;
-  bottom: 0;
-  z-index: 1000;
-
-  .breadcrumb {
-    display: none;
-  }
-
-  &-config {
-    .notification {
-      &-count {
-        margin: 0.3125rem 1rem; // 5px 16px
-        padding: 0.125rem 0.625rem; // 2px 10px
-        border-radius: 1.25rem; // 20px
-        background-color: $blue-gray;
-        font-size: 0.75rem; // 12px
-        font-weight: 700;  // bold
-        text-align: center;
-        position: absolute;
-        line-height: inherit;
-      }
-      &.active { // 알림이 존재할 경우
-        .notification-round {
-          fill: $point-blue;
-        }
-        .notification-bell {
-          fill: $white;
-        }
-        .notification-count {
-          color: $white;
-          background-color: $point-blue;
-        }
-      }
-    }
-    .user-info {
-      height: 3.125rem; // 50px
-      display: flex;
-      align-items: center;
-      padding: 0.6875rem 0 0.6875rem 1.3125rem;
-      .user-name {
-        color: $blue-gray;
-        font-weight: $font-weight-medium;
-      }
-      .user-profile {
-        width: 1.688rem; // 27px
-        height: 1.688rem;  // 27px
-        border-radius: 50%;
-        display: inline-block; 
-        vertical-align: middle;
-        margin-right: 0.625rem; // 10px
-      }
-    }
-    .logout {
-      height: 3.125rem; // 50px
-      align-items: center;
-      padding: 0.6875rem 0 0.6875rem 1.3125rem;
-      .btn-logout {
-        display: flex;
-        color: $blue-gray;
-        font-weight: $font-weight-medium;
-      }
-      .icon-logout {
-        margin-right: 0.875rem; // 14px
-        @include maskImage('#{$icon-folder-path}gnb/icon_gnb_logout.svg', 1.6875rem, 1.6875rem, no-repeat, center, null, $blue-gray); // 27px
-      }
-    }
-    & > div:hover {
-      background: $menu-bg-hover;
-    }
-  }
-}
-
-.logo {
-  width: $logo-width;
-  height: $logo-height;
-  background-color: $menu-bg-color;
-  position: fixed;
-  z-index: 1000;
-  padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
-}
-
-.menu {
-  width: $menu-width;
-  height: $menu-height;
-  background-color: $menu-bg-color;
-  position: relative;
-  left: 0;
-  top: $logo-height;
-  z-index: 1000;
-  overflow: auto;
-  .right {
-    right: 0.375rem; // 6px
-  }
-}
-
 // GNB
-.menu-area {
-  .gnb {
-    padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
-    vertical-align: middle;
-    &-area {
-      line-height: 1.3;
-      font-weight: $font-weight-medium;
-      &:first-child {
-        margin-top: 0.3125rem; // 5px
+.gnb {
+  width: $nav-width;
+
+  .navigation {
+    width: $nav-width;
+    height: $nav-height;
+    background-color: $nav-bg-color;
+    position: fixed;
+    bottom: 0;
+    z-index: 1000;
+  
+    .breadcrumb { display: none; }
+  
+    &-config {
+      .notification {
+        &-count {
+          position: absolute;
+          font-size: 0.75rem; // 12px
+          font-weight: $font-weight-bold;
+          background-color: $blue-gray;
+          margin: 0.3125rem 1rem; // 5px 16px
+          padding: 0.125rem 0.625rem; // 2px 10px
+          border-radius: 1.25rem; // 20px
+          line-height: inherit;
+        }
+        &.active { // 알림이 존재할 경우
+          .notification-round {  fill: $point-blue; }
+          .notification-bell { fill: $white; }
+          .notification-count {
+            color: $white;
+            background-color: $point-blue;
+          }
+        }
       }
-      &:hover {
-        background: $menu-bg-hover;
-      }
-      .gnb-link {
-        display: flex;
-        cursor: pointer;
-        .menu-name {
-          padding-left: 1.1875rem; //19px
-          display: inline-block;
-          color: $menu-color;
+      .user-info {
+        height: 3.125rem; // 50px
+        padding: 0.6875rem 0 0.6875rem 1.3125rem;
+        .user-name {
+          color: $blue-gray;
           font-weight: $font-weight-medium;
-          line-height: 1.3rem;
         }
-        .arrow {
-          &-right {
-            @include menuArrow;
-            -webkit-mask: url($icon-arrow-left) no-repeat center center;
-            mask-image: url($icon-arrow-left);
-          }
-          &-down {
-            @include menuArrow;
-            -webkit-mask: url($icon-arrow-bottom) no-repeat center center;
-            mask-image: url($icon-arrow-bottom);
-          }
+        .user-profile {
+          display: inline-block; 
+          width: 1.688rem; // 27px
+          height: 1.688rem;  // 27px
+          border-radius: 50%;
+          vertical-align: middle;
+          margin-right: 0.625rem; // 10px
         }
       }
-      .snb {
-        &-group {
-          display: none;
+      .logout {
+        height: 3.125rem; // 50px
+        padding: 0.6875rem 0 0.6875rem 1.3125rem;
+        .btn-logout {
+          font-weight: $font-weight-medium;
+          color: $blue-gray;
         }
-        &-area {
-          font-size: $menu-font;
-          color: $menu-color;
-          font-weight: $font-weight-regular;
-          .snb-link {
-            display: block;
-            cursor: pointer;
-            .menu-name {
-              padding-left: 2.4375rem; // 39px
-              display: inline-block;
-            }
-            &.snb {
-              padding: 0.5rem 1.25rem 0.5rem 1.25rem; // 8px 20px 8px 20px
-              color: $menu-color;
-            }
-            &.active {
-              background-color: $menu-bg-hover;
-              .menu-name { color: $white; }
-            }
-          }
+        .icon-logout {
+          margin-right: 0.875rem; // 14px
+          @include maskImage('#{$icon-folder-path}gnb/icon_gnb_logout.svg', 1.6875rem, 1.6875rem, no-repeat, center, null, $blue-gray); // 27px
         }
       }
+      & > div:hover { background: $menu-bg-hover; }
     }
+  }
+  
+  .logo {
+    position: fixed;
+    width: $logo-width;
+    height: $logo-height;
+    background-color: $menu-bg-color;
+    z-index: 1000;
+    padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
+  }
+  
+  .menu {
+    position: relative;
+    width: $menu-width;
+    height: $menu-height;
+    background-color: $menu-bg-color;
+    top: $logo-height;
+    left: 0;
+    z-index: 1000;
+    overflow: auto;
 
-    &.active {
-      background-color: $menu-bg-hover;
-      .menu-name {
-        color: $white;
-      }
-      .icon-gnb { background: $point-blue; }
-    }
-    &.active-parent {
-      .menu-name { color: $white; }
-      .icon-gnb{ background: $point-blue; }
-      .arrow-right, .arrow-down { background: $white; }
-    }
+    .right { right: 0.375rem; } // 6px
   }
-}
+  
+  .menu-area {
+    .gnb {
+      padding: 0.9375rem 1.25rem 0.9375rem 1.25rem; // 15px 20px 15px 20px
+      vertical-align: middle;
+      &-area {
+        line-height: 1.3;
+        font-weight: $font-weight-medium;
+        &:first-child {
+          margin-top: 0.3125rem; // 5px
+        }
+        &:hover { background: $menu-bg-hover; }
+        .gnb-link {
+          cursor: pointer;
 
-.icon-gnb {
-  @include menuIcon;
-  &-board {
-    -webkit-mask: url($icon-gnb-board) no-repeat center center;
-    mask-image: url($icon-gnb-board);
+          .menu-name {
+            display: inline-block;
+            font-weight: $font-weight-medium;
+            color: $menu-color;
+            line-height: 1.3rem;
+            padding-left: 1.1875rem; //19px
+          }
+          // 화살표 아이콘
+          .arrow {
+            &-right {
+              @include maskImage($icon-arrow-left, 0.75rem, 1.25rem, no-repeat, center, null, $blue-gray); // 12px 20px
+              float: right;
+              padding: 0 0.375rem 0 0; // 0 6px 0 0
+              margin-left: auto;
+            }
+            &-down {
+              @include maskImage($icon-arrow-bottom, 0.75rem, 1.25rem, no-repeat, center, null, $blue-gray); // 12px 20px
+              float: right;
+              padding: 0 0.375rem 0 0; // 0 6px 0 0
+              margin-left: auto;
+            }
+          }
+        }
+        .snb {
+          &-group { display: none; }
+          &-area {
+            font-size: $menu-font;
+            font-weight: $font-weight-regular;
+            color: $menu-color;
+
+            .snb-link {
+              display: block;
+              cursor: pointer;
+              .menu-name {
+                display: inline-block;
+                padding-left: 2.4375rem; // 39px
+              }
+              &.snb {
+                padding: 0.5rem 1.25rem 0.5rem 1.25rem; // 8px 20px 8px 20px
+                color: $menu-color;
+              }
+              &.active {
+                background-color: $menu-bg-hover;
+                .menu-name { color: $white; }
+              }
+            }
+          }
+        }
+      }
+  
+      &.active {
+        background-color: $menu-bg-hover;
+        .menu-name { color: $white; }
+        .icon-gnb { background: $point-blue; }
+      }
+      &.active-parent {
+        .menu-name { color: $white; }
+        .icon-gnb { background: $point-blue; }
+        .arrow-right, .arrow-down { background: $white; }
+      }
+    }
   }
-  &-dashboard {
-    -webkit-mask: url($icon-gnb-dashboard) no-repeat center center;
-    mask-image: url($icon-gnb-dashboard);
-  }
-  &-document {
-    -webkit-mask: url($icon-gnb-document) no-repeat center center;
-    mask-image: url($icon-gnb-document);
-  }
-  &-download {
-    -webkit-mask: url($icon-gnb-download) no-repeat center center;
-    mask-image: url($icon-gnb-download);
-  }
-  &-faq {
-    -webkit-mask: url($icon-gnb-faq) no-repeat center center;
-    mask-image: url($icon-gnb-faq);
-  }
-  &-notice {
-    -webkit-mask: url($icon-gnb-notice) no-repeat center center;
-    mask-image: url($icon-gnb-notice);
-  }
-  &-config {
-    -webkit-mask: url($icon-gnb-config) no-repeat center center;
-    mask-image: url($icon-gnb-config);
-  }
-  &-workflow {
-    -webkit-mask: url($icon-gnb-workflow) no-repeat center center;
-    mask-image: url($icon-gnb-workflow);
-  }
-  &-token {
-    -webkit-mask: url($icon-gnb-token) no-repeat center center;
-    mask-image: url($icon-gnb-token);
+  // 아이콘 
+  .icon-gnb {
+    &-board {
+      @include maskImage($icon-gnb-board, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-dashboard {
+      @include maskImage($icon-gnb-dashboard, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-document {
+      @include maskImage($icon-gnb-document, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-download {
+      @include maskImage($icon-gnb-download, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-faq {
+      @include maskImage($icon-gnb-faq, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-notice {
+      @include maskImage($icon-gnb-notice, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-config {
+      @include maskImage($icon-gnb-config, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-workflow {
+      @include maskImage($icon-gnb-workflow, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
+    &-token {
+      @include maskImage($icon-gnb-token, 1.25rem, 1.25rem, no-repeat, center, null, $blue-gray); // 20xp 20px
+    }
   }
 }
