--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -1,13 +1,18 @@
 @import "../../template/_layout.scss";
 
-.itsm {
-  // 기본 ITSM 구성
-  &-container {
-    width: 100%;
-    max-width: calc(100% - 13.75rem);
-    height: 100%;
-    min-height: 100vh;
-
+.itsm-container {
+  @include container;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  // 메뉴 디자인은 _gnb.scss 참조
+  // 메인
+  .main {
+    width: calc(100vw - #{$nav-width});
+    height: 100vh;
+    
+    // 상단 영역
+    // #9572 [ITSM] 상단 제목을 공통 mixin 생성 일감 작업시 수정 필요
     .page-title {
       display: flex;
       align-items: baseline;
@@ -16,6 +21,15 @@
         padding-left: 0.625rem;
       }
     }
+    
+    // 리스트
+  }
+}
+
+.itsm {
+  // 기본 ITSM 구성
+  &-container {
+    
 
     @import "contents/_contents-token.scss";
     @import "contents/_contents-list.scss";
