--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -58,25 +58,6 @@
     }
 }
 
-@mixin menuIcon {
-    width: 1.25rem; // 20px
-    height: 1.25rem; // 20px
-    background: #929aa6;
-    mask-repeat: no-repeat;
-    mask-position: center center;
-}
-
-@mixin menuArrow {
-    padding: 0 0.375rem 0 0; // 0 6px 0 0
-    float: right;
-    width: 0.75rem; // 12px
-    height: 1.25rem; // 20px
-    margin-left: auto;
-    background: #929aa6;
-    mask-repeat: no-repeat;
-    mask-position: center center;
-}
-
 @mixin content-header() {
     .header {
         padding: 3.1875rem 3.75rem 3.1875rem 3.75rem; // 51px 60px 51px 60px
@@ -147,3 +128,11 @@
     }
 }
 
+// 리스트 공통
+// <div class="list">
+// </div>
+@mixin listTemplate() {
+  .list {
+      
+  }
+}
