--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -5188,12 +5188,12 @@ body.modal-active {
 
 .modal-dialog.token-list {
   width: 62.5rem;
-  height: 46.875rem;
+  height: 53.0625rem;
 }
 
 .modal-dialog.token-list .modal-content {
-  height: calc(46.875rem - 3.375rem);
-  padding: 0.625rem 1.25rem 1.25rem 1.25rem;
+  height: calc(53.0625rem - 3.375rem - 5rem);
+  padding: 0.625rem 1.25rem 2.5rem 1.25rem;
 }
 
 .modal-dialog.token-list .modal-content .related-instance-list {
@@ -5216,7 +5216,7 @@ body.modal-active {
 .modal-dialog.token-list .modal-content .related-instance-list .table-set table .list-body {
   display: block;
   width: 60rem;
-  height: 33.125rem;
+  height: 32.8125rem;
   color: #586872;
   overflow-y: auto;
 }
