--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -59,24 +59,28 @@
         // 관련문서 추가
         function saveTokenList() {
             let checked = document.querySelectorAll('input[name=chk]:checked');
-            let jsonArray = new Array();
-            for (let i = 0; i < checked.length; i++) {
-                let jsonObject = new Object();
-                jsonObject.folderId = '[[${folderId}]]';
-                jsonObject.instanceId = checked[i].value;
-                jsonArray.push(jsonObject);
+            if (checked.length === 0) {
+                aliceJs.alertWarning(i18n.msg('token.msg.selectToken'));
+                return;
+            } else {
+                let jsonArray = new Array();
+                for (let i = 0; i < checked.length; i++) {
+                    let jsonObject = new Object();
+                    jsonObject.folderId = '[[${folderId}]]';
+                    jsonObject.instanceId = checked[i].value;
+                    jsonArray.push(jsonObject);
+                }
+                restSubmit('POST', '/rest/folders', function() {
+                    aliceDocument.createTokenInfoTab();
+                    tokenListModal.hide();
+                }, jsonArray, true);
             }
-            restSubmit('POST', '/rest/folders', function() {
-                aliceDocument.createTokenInfoTab();
-                tokenListModal.hide();
-            }, jsonArray, true);
         }
 
         // 관련 문서 모달 내부 Template
         function createModalContent(data) {
             return `<div class="related-instance-list">` +
-                       `<input class="search col-5" type="text" name="search" id="search" th:placeholder="#{token.label.searchPlaceholder}"/>` +
-                       `<button class="point-fill float-right" onclick="saveTokenList();">${i18n.msg('common.btn.add')}</button>` +
+                       `<input class="search col-5" type="text" name="search" id="search" placeholder="${i18n.msg('token.label.searchPlaceholder')}"/>` +
                        `<div class="table-set" id="instanceList"></div>` +
                     `</div>`;
         }
@@ -87,7 +91,21 @@
                 title: i18n.msg('token.label.relatedInstance'),
                 body: createModalContent(),
                 classes: 'token-list',
-                buttons: [],
+                buttons: [{
+                    content: i18n.msg('common.btn.add'),
+                    classes: "point-fill",
+                    bindKey: false,
+                    callback: function(modal) {
+                        saveTokenList();
+                    }
+                },{
+                    content: i18n.msg('common.btn.close'),
+                    classes: "default-line",
+                    bindKey: false,
+                    callback: function(modal) {
+                        modal.hide();
+                    }
+                }],
                 close: {
                     closable: false,
                 },
