--- a/src/main/resources/public/src/scss/template/_mixins.scss
+++ b/src/main/resources/public/src/scss/template/_mixins.scss
@@ -247,6 +247,12 @@
         display: flex;
         align-items: center;
       }
+      .margin-bottom-10 {
+        margin-bottom: 0.625rem; // 10px
+      }
+      .none-margin {
+        margin: 0;
+      }
     }
   }
 }
