--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-edit.scss
@@ -33,26 +33,21 @@
     .switch { margin-top: 0.9375rem; } // 15px
   }
 
-  /*
-   * #9067 일감 완료 후 삭제 또는 수정 여부를 확인합니다.
-   * 해당 클래스가 사용되는 카테고리 관리 화면은 추후 게시판 관리 페이지에 합쳐질 예정입니다.
-   */
+  // 게시판 카테고리
   .category-list {
     width: 61.25rem;
     margin: auto;
     .edit-table {
       width: 100%;
-      head {
+      thead {
         display: block;
         & > tr {
           display: flex;
           height: 2.375rem; // 38px
-          border-bottom: .125rem solid $default-gray;
           th {
-            @include h4();
-            &:first-child {
-              padding-left: 1.25rem; // 20px
-            }
+            @include h5();
+            text-align: left;
+            border-bottom: 0.0625rem solid $default-gray;
           }
         }
       }
@@ -64,6 +59,11 @@
             display: table;
             width: 100%;
             height: 2.875rem;
+          &:last-child {
+            td {
+              border-bottom: 0.0625rem solid $default-gray;
+            }
+          }
           &:hover {
             background: $line-gray;
           }
