#9548 URL 문서 및 DB 스크립트 현행화 - [사용자, 인증, 권한]
* list부분을 s로 변경
/users/list => /users
/auths/list => /auths
* 대소문자 변경
/users/{userkey}/editSelf = > /users/{userkey}/editself
/rest/users/{userkey}/resetPassword => /rest/users/{userkey}/resetpassword
/certification/certifiedMail => /certification/certifiedmail
* 기타
/certification/regist = > /certification

--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -331,7 +331,7 @@
             const urlParam = 'search=' + data.search;
             const opt = {
                 method: 'get',
-                url: '/auths/list?' + urlParam,
+                url: '/auths?' + urlParam,
                 showProgressbar: showProgressbar,
                 callbackFunc: function(response) {
                     let result = response.responseText;
