--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -53,7 +53,7 @@
             } else {
                 offsetCount = 0;
                 urlParam += '&offset=' + offsetCount;
-                restSearchSubmit('get', '/users/list?' + urlParam, isScroll);
+                restSearchSubmit('get', '/users?' + urlParam, isScroll);
             }
         }
 
