--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -150,7 +150,7 @@
                 avatarUUID: document.getElementById('avatarUUID').value
             };
 
-            restSubmit('POST', '/certification/register', true, registerInfo);
+            restSubmit('POST', '/certification', true, registerInfo);
         }
     }
 
