#9594 URL 문서 및 DB 스크립트 현행화 - [문서함, 커스텀 코드, 자료실, 첨부파일, 알림, 이미지]
* list부분을 s로 변경
/tokens/list => /tokens
/tokens/view-pop/list => /tokens/view-pop/documents
/custom-codes/list => /custom-codes
/downloads/list => /downloads
/notifications/list => /notifications

* 대소문자 변경
/rest/fileNameExtensionList => /rest/filenameextensions

* 기타
자료실, 문서함, 커스텀 코드 리스트 호출 오류 수정

--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -57,7 +57,7 @@
             } else {
                 offsetCount = 0;
                 urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/custom-codes/list?' + urlParam, isScroll);
+                restSubmit('get', '/custom-codes?' + urlParam, isScroll);
             }
         }
 
@@ -121,7 +121,7 @@
 
         // Tr 동적 데이터 만들기
         function getDataTemplate(data) {
-            let div = document.querySelector('.os-content');
+            let div = document.querySelector('.list-body .os-content');
             let tr = document.createElement('tr');
 
             let tdCustomCodeName = document.createElement('td');
