--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -108,7 +108,7 @@
 
         // Div 동적 데이터 만들기
         function getDataTemplate(data) {
-            let divCardArea = document.querySelector('.card-area');
+            let divCardArea = document.querySelector('.document-area .card-area');
             let div = document.createElement('div');
             let divCardDummy = document.createElement('div');
             divCardDummy.className = 'document-card-box';
