--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -43,7 +43,7 @@
         };
 
         function getInstanceList(search, showProgressbar) {
-            restSubmit('get', '/tokens/view-pop/list?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
+            restSubmit('get', '/tokens/view-pop/documents?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
                 document.getElementById('instanceList').innerHTML = result;
                 let instanceDtEle = document.querySelectorAll('td[name=instanceDt]');
                 for (let i = 0; i < instanceDtEle.length; i++) {
