#9527 모든 메뉴의 동적 데이터 불러오기가 안됨
* 수정범위
portalMain.html -->포탈 검색
downloadSearch.html -->포탈 - 자료실
noticeSearch.html -->포탈 - 공지사항
dashboardView.html -->개인현황판
boardSearch.html -->게시판
faqSearch.html -->FAQ
userSearch.html -->사용자
noticeSearch.html -->공지사항
boardAdminSearch.html -->게시판관리
processAdminSearch.html -->프로세스
formAdminSearch.html -->문서양식

--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -143,7 +143,7 @@
         }
 
         function getDataTemplate(data) {
-            let divTokenArea = document.querySelector('.token-area');
+            let divTokenArea = document.querySelector('.list .os-content');
 
             let divListItem = document.createElement('div');
             divListItem.className = 'list-item';
