--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -219,7 +219,7 @@
         }
 
         function getDataTemplate(data) {
-            let div = document.querySelector('.os-content');
+            let div = document.querySelector('.list .os-content');
             let divRow = document.createElement('div');
             divRow.className = 'row flex-row align-items-center';
             // 이미지
