--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -164,7 +164,7 @@
 
         //Tr 동적 데이터 만들기
         function getDataTemplate(data) {
-            let div = document.querySelector('.os-content');
+            let div = document.querySelector('.list-body .os-content');
             let tr = document.createElement('tr');
 
             let tdBoardSeq = document.createElement('td');
