--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -17,9 +17,9 @@
             <form id="searchFrm">
                 <input type="text" class="search col-5" id="searchValue" name="searchValue" maxlength="100"
                        th:placeholder="#{notice.label.searchPlaceholder}"/>
-                <input type="text" class="search-date icon-date col-3" id="fromDt" name="fromDt" readonly="readonly"/>
+                <input type="text" class="search-date icon-date col-3" id="fromDt" name="fromDt"/>
                 <span>~</span>
-                <input type="text" class="search-date icon-date col-3" id="searchToDt" name="searchToDt" readonly="readonly"/>
+                <input type="text" class="search-date icon-date col-3" id="searchToDt" name="searchToDt"/>
                 <input type="hidden" class="search-date icon-date" id="toDt" name="toDt" readonly="readonly"/>
             </form>
         </div>
