--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -20,9 +20,9 @@
                 <form id="searchFrm">
                     <input class="search col-5" id="searchValue" name="searchValue" type="text" maxlength="100"
                            th:placeholder="#{notice.label.searchPlaceholder}"/>
-                    <input class="search-date col-3" type="text" id="fromDt" name="fromDt" readonly="readonly"/>
+                    <input class="search-date col-3" type="text" id="fromDt" name="fromDt"/>
                     <span>~</span>
-                    <input class="search-date col-3" type="text" id="searchToDt" name="searchToDt" readonly="readonly"/>
+                    <input class="search-date col-3" type="text" id="searchToDt" name="searchToDt"/>
                     <input class="search-date" type="hidden" id="toDt" name="toDt" readonly="readonly"/>
                 </form>
             </div>
