--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -32,9 +32,8 @@
                         </select>
                         <input class="search col-3" type="text" name="searchValue" id="searchValue"
                                th:placeholder="#{token.label.searchPlaceholder}"/>
-                        <input type="text" id="searchFromDt" name="searchFromDt" class="search-date col-3"
-                               readonly="readonly"/>
-                        <input type="text" id="toDt" name="toDt" class="search-date col-3" readonly="readonly"/>
+                        <input type="text" id="searchFromDt" name="searchFromDt" class="search-date col-3"/>
+                        <input type="text" id="toDt" name="toDt" class="search-date col-3"/>
                         <input type="hidden" id="searchToDt" name="searchToDt" class="search-date col-2"
                                readonly="readonly"/>
                         <input class="search col-3" type="text" name="searchTags" id="searchTags"
