#9597 URL 문서 및 DB 스크립트 현행화 - [프로세스]
- processes-admin 삭제 : processes-admin => processes, processes => process으로 변경
- /processes/attachFile/view 삭제

--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -212,7 +212,7 @@
         }
 
         function openProcessStatusPopUp() {
-            window.open('/processes/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
+            window.open('/process/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
         }
 
         function onRelatedInstanceDelete(instanceId) {
