--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -120,7 +120,7 @@
         }
 
         function openProcessStatusPopUp() {
-            window.open('/processes/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
+            window.open('/process/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
         }
 
         function openTokenEdit(tokenId) {
