--- a/src/main/resources/public/template/form/formAdminSearch.html
+++ b/src/main/resources/public/template/form/formAdminSearch.html
@@ -456,7 +456,7 @@
             tdFormPreview.style.width = '10%';
             let formPreviewBtn = document.createElement('button');
             let spanFormPreview = document.createElement('span');
-            formPreviewBtn.className = 'default-fill list-popup';
+            formPreviewBtn.className = 'default-fill btn-popup';
             spanFormPreview.className = 'icon-search';
             formPreviewBtn.onclick = function() {
                 openFormDesignerView(data.id);
