--- a/src/main/resources/public/template/layout/defaultLayout.html
+++ b/src/main/resources/public/template/layout/defaultLayout.html
@@ -13,7 +13,7 @@
 		   		    <th:block th:replace="layout/navigation">menu</th:block>
 				    <th:block th:replace="layout/menu">menu</th:block>
 				</div>
-				<div class="main">
+				<div class="main flex-column">
 				    <th:block layout:fragment="content"></th:block>
 				</div>
 				<footer th:replace="layout/fragments/commonFooter :: commonFooter"></footer>
