--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -454,7 +454,7 @@
             tdProcessPreview.style.width = '10%';
             let processPreviewBtn = document.createElement('button');
             let spanProcessPreview = document.createElement('span');
-            processPreviewBtn.className = 'default-fill list-popup';
+            processPreviewBtn.className = 'default-fill btn-popup';
             spanProcessPreview.className = 'icon-search';
             processPreviewBtn.onclick = function () {
                 openProcessDesignerView(data.id);
