--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1017,42 +1017,7 @@ label {
   border-color: #0098FF;
 }
 
-h1 {
-  color: #3F4B56;
-  font-size: 2.25rem;
-  font-weight: 700;
-  padding: 0.625rem 0 0.625rem 0.3125rem;
-}
-
-h2 {
-  color: #3F4B56;
-  font-size: 1.75rem;
-  font-weight: 500;
-}
-
-h3 {
-  color: #3F4B56;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-h4 {
-  color: #3F4B56;
-  font-size: 1.125rem;
-  font-weight: 500;
-}
-
-h5 {
-  color: #586872;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
 h6 {
-  color: #7E848C;
-  font-family: 맑은고딕;
-  font-size: 0.875rem;
-  font-weight: 400;
   padding: 0 0 0 0.625rem;
 }
 
@@ -1725,10 +1690,16 @@ button.ghost-line:disabled .icon {
   margin-left: 0.3125rem;
 }
 
-.btn.list-popup:focus, .btn.list-popup:hover,
-button.list-popup:focus,
-button.list-popup:hover {
-  background-color: #E1E3E6;
+.btn.btn-popup,
+button.btn-popup {
+  padding: 3.5px 5px;
+  margin: 0;
+}
+
+.btn.btn-popup:focus, .btn.btn-popup:hover,
+button.btn-popup:focus,
+button.btn-popup:hover {
+  background-color: #CCCED1;
 }
 
 .btn.plus,
@@ -2161,7 +2132,97 @@ button .icon-plus {
 
 .itsm-container .main {
   width: calc(100vw - 13.75rem);
-  height: 100%;
+  height: 100vh;
+}
+
+.itsm-container .main .header-title {
+  padding: 1.563rem 0px 3.875rem 0px;
+}
+
+.itsm-container .main .header-title .description {
+  margin-left: 0.625rem;
+}
+
+.itsm-container .main .header-search {
+  padding: 0.3125rem 0px 1.875rem 0px;
+}
+
+.itsm-container .main .page-title {
+  display: flex;
+  align-items: baseline;
+}
+
+.itsm-container .main .page-title .title-description {
+  color: #7E848C;
+  font-family: 맑은고딕;
+  font-size: 0.875rem;
+  font-weight: 400;
+  padding-left: 0.625rem;
+}
+
+.itsm-container .main .list a, .itsm-container .main .list button {
+  cursor: pointer;
+}
+
+.itsm-container .main .list-table {
+  position: relative;
+  display: inline-table;
+  width: 100%;
+}
+
+.itsm-container .main .list-head tr {
+  height: 2.375rem;
+  border-bottom: 0.125rem solid #E1E3E6;
+}
+
+.itsm-container .main .list-head tr th {
+  font-size: 1.125rem;
+  font-weight: 500;
+  color: #3F4B56;
+  padding: 0 0.9375rem;
+}
+
+.itsm-container .main .list-head tr th:first-child {
+  padding-left: 1.25rem;
+}
+
+.itsm-container .main .list-body {
+  position: absolute;
+  width: 100%;
+  height: 32.69rem;
+}
+
+.itsm-container .main .list-body tr:hover {
+  background: #EBEBEB;
+}
+
+.itsm-container .main .list-body tr td {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #586872;
+  padding: 0 0.9375rem;
+}
+
+.itsm-container .main .list-body tr td:first-child {
+  padding-left: 1.25rem;
+}
+
+.itsm-container .main .list-body tr td a {
+  color: #586872;
+}
+
+.notice-header {
+  padding: 2.188rem 3.75rem 0 3.75rem;
+  background-color: #F7F8F9;
+}
+
+.notice-content {
+  padding: 0.9375rem 3.75rem;
+  background-color: #F7F8F9;
+}
+
+.notice-content .notice-pinned {
+  background-color: rgba(135, 206, 255, 0.15);
 }
 
 .itsm-container {
@@ -2208,19 +2269,6 @@ button .icon-plus {
  * @author jy.lim
  * @version 1.0
  */
-}
-
-.itsm-container .page-title {
-  display: flex;
-  align-items: baseline;
-}
-
-.itsm-container .page-title .title-description {
-  color: #7E848C;
-  font-family: 맑은고딕;
-  font-size: 0.875rem;
-  font-weight: 400;
-  padding-left: 0.625rem;
 }
 
 .itsm-container .contents-token {
@@ -3338,10 +3386,6 @@ button .icon-plus {
 
 .no-data-found-list td {
   text-align: center;
-}
-
-.notice-pinned {
-  background-color: #87CEFF;
 }
 
 /* _alerts.scss 
