--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -127,12 +127,61 @@
         }
     }
 }
-
+// 헤더 공통
+@mixin headerTemplate() {
+  .header-title {
+    padding: 1.563rem 0px 3.875rem 0px; // 25px 0px 62px 0px
+    .description { margin-left: 0.625rem; } // 10px
+  }
+  .header-search {
+    padding: 0.3125rem 0px 1.875rem 0px; // 5px 0px 30px 0px
+  }
+ }
 // 리스트 공통
-// <div class="list">
-// </div>
 @mixin listTemplate() {
   .list {
-      
+    a, button { cursor: pointer; }
+    &-table {
+      position: relative;
+      display: inline-table;
+      width: 100%;
+    }
+    // thead
+    &-head {
+      tr {
+        height: 2.375rem; // 38px
+        border-bottom: 0.125rem solid $default-gray; // 2px
+
+        th {
+          font-size: 1.125rem; // 18px
+          font-weight: $font-weight-medium;
+          color: $light-black;
+          padding: 0 0.9375rem; // 0 15px
+
+          &:first-child { padding-left: 1.25rem; } // 20px
+        }
+      }
+    }
+    // tbody
+    &-body {
+      position: absolute;
+      width: 100%;
+      height: 32.69rem; // 523px
+      tr {
+        // 마우스 오버시 배경 색상
+        &:hover { background: $line-gray; }
+
+        td {
+          font-size: 1rem; // 16px
+          font-weight: $font-weight-regular;
+          color: $dark-gray;
+          padding: 0 0.9375rem; // 0 15px
+          
+          &:first-child { padding-left: 1.25rem; } // 20px
+
+          a { color: $dark-gray; }
+        }
+      }
+    }
   }
 }
