--- a/src/main/resources/public/template/process/processAdminList.html
+++ b/src/main/resources/public/template/process/processAdminList.html
@@ -35,7 +35,7 @@
                     </div>
                 </td>
                 <td width="10%" class="align-center">
-                    <button type="button" class="default-fill list-popup" th:onclick="openProcessDesignerView([[${process.id}]])">
+                    <button type="button" class="default-fill btn-popup" th:onclick="openProcessDesignerView([[${process.id}]])">
                         <span class="icon-search"></span>
                     </button>
                 </td>
